<resources>

    <!--logo-->
    <string name="app_name">Drop In</string>
    <string name="drop_in_logo">drop_in_logo</string>

    <!--log-in page-->
    <string name="log_in_text">Log-In</string>
    <string name="email">Email</string>
    <string name="user_password">Password</string>
    <string name="login_btn">Log-In</string>
    <string name="signup_btn">Sign-Up</string>

    <!--sign-up page-->
    <string name="sign_up_text">Sign-Up</string>
    <string name="user_new_name">Username</string>
    <string name="user_new_email">Email</string>
    <string name="user_new_password">Password</string>
    <string name="user_new_password_confirm">Confirm Password</string>
    <string name="signup_new_btn">Sign-Up</string>

    <!--set up profile page-->
    <string name="user_pfp">User Profile Picture</string>
    <string name="user_name">Username</string>
    <string name="biography">insert bio here</string>

    <string name="biography_text">Biography</string>
    <string name="profile_pic_text">Profile Pictures</string>
    <string name="video_games_played_text">Video Games Played</string>
    <string name="outside_interest_text">Outside Interests</string>

    <string name="interest_1">Sports</string>
    <string name="interest_2">Art</string>
    <string name="interest_3">Cars</string>
    <string name="interest_4">Music</string>
    <string name="interest_5">Cooking</string>
    <string name="interest_6">Anime</string>
    <string name="interest_7">Reading</string>
    <string name="interest_8">Martial Arts</string>

    <string name="cancel_btn">Cancel</string>
    <string name="submit_btn">Submit</string>

    <!--set up profile page-->
    <string name="rate_txt">Rate</string>
    <string name="poke_txt">Poke</string>
    <string name="logout_btn">Log-out</string>
    
    <!--discover page-->
    <string name="discover_text">Discover</string>
    <string name="pokes_btn">Pokes</string>
    <string name="profile_btn">Account</string>

    <!--poke page-->
    <string name="pokes_text">Pokes</string>
    <string name="discover_btn">Discover</string>
    <string name="wants_to_play_text">Wants to play!</string>

</resources>