<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".PokeView">

    <TextView
        android:id="@+id/pokes_text"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/curved"
        android:text="@string/pokes_text"
        android:textAlignment="textStart"
        android:textColor="@color/text"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/drop_in_logo"
        android:layout_width="153dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/drop_in_logo"
        android:contentDescription="@+id/drop_in_logo" />

    <Button
        android:id="@+id/poke_1"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokes_text" />

    <ImageView
        android:id="@+id/pfp_1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:elevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokes_text"
        app:srcCompat="@drawable/grey_background_circle"
        android:contentDescription="@+id/pfp_1" />

    <TextView
        android:id="@+id/poker_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:elevation="2dp"
        android:text=" "
        android:textColor="@color/text"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/pfp_1"
        app:layout_constraintTop_toBottomOf="@+id/pokes_text" />

    <TextView
        android:id="@+id/wants_to_play_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:text="@string/wants_to_play_text"
        android:textColor="@color/text"
        android:textSize="35sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/pfp_1"
        app:layout_constraintTop_toBottomOf="@+id/poker_1" />

    <Button
        android:id="@+id/poke_2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poke_1" />

    <ImageView
        android:id="@+id/pfp_2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:visibility="invisible"
        android:elevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pfp_1"
        app:srcCompat="@drawable/grey_background_circle"
        android:contentDescription="@+id/pfp_2" />

    <TextView
        android:id="@+id/poker_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:elevation="2dp"
        android:text=" "
        android:textColor="@color/text"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/pfp_2"
        app:layout_constraintTop_toBottomOf="@+id/poke_1" />

    <TextView
        android:id="@+id/wants_to_play_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:text="@string/wants_to_play_text"
        android:textColor="@color/text"
        android:textSize="35sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/pfp_2"
        app:layout_constraintTop_toBottomOf="@+id/poker_2" />

    <Button
        android:id="@+id/poke_3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poke_2" />

    <ImageView
        android:id="@+id/pfp_3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:visibility="invisible"
        android:elevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pfp_2"
        app:srcCompat="@drawable/grey_background_circle"
        android:contentDescription="@+id/pfp_3" />

    <TextView
        android:id="@+id/poker_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:text=" "
        android:textColor="@color/text"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/pfp_3"
        app:layout_constraintTop_toBottomOf="@+id/wants_to_play_2" />

    <TextView
        android:id="@+id/wants_to_play_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:text="@string/wants_to_play_text"
        android:textColor="@color/text"
        android:textSize="35sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/pfp_3"
        app:layout_constraintTop_toBottomOf="@+id/poker_3" />

    <Button
        android:id="@+id/poke_4"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poke_3" />

    <ImageView
        android:id="@+id/pfp_4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:visibility="invisible"
        android:elevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pfp_3"
        app:srcCompat="@drawable/grey_background_circle"
        android:contentDescription="@+id/pfp_4" />

    <TextView
        android:id="@+id/poker_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:elevation="2dp"
        android:text=" "
        android:textColor="@color/text"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/pfp_4"
        app:layout_constraintTop_toBottomOf="@+id/poke_3" />

    <TextView
        android:id="@+id/wants_to_play_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:text="@string/wants_to_play_text"
        android:textColor="@color/text"
        android:textSize="35sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/pfp_4"
        app:layout_constraintTop_toBottomOf="@+id/poker_4" />

    <Button
        android:id="@+id/poke_5"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poke_4" />

    <ImageView
        android:id="@+id/pfp_5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:visibility="invisible"
        android:elevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pfp_4"
        app:srcCompat="@drawable/grey_background_circle"
        android:contentDescription="@+id/pfp_5" />

    <TextView
        android:id="@+id/poker_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:elevation="2dp"
        android:text=" "
        android:textColor="@color/text"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/pfp_5"
        app:layout_constraintTop_toBottomOf="@+id/poke_4" />

    <TextView
        android:id="@+id/wants_to_play_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:text="@string/wants_to_play_text"
        android:textColor="@color/text"
        android:textSize="35sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/pfp_5"
        app:layout_constraintTop_toBottomOf="@+id/poker_5" />

    <Button
        android:id="@+id/discover_btn"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/discover_text"
        android:textSize="31sp"
        android:textColor="@color/text"
        android:backgroundTint="@color/button"
        app:layout_constraintEnd_toStartOf="@+id/profile_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poke_5" />

    <Button
        android:id="@+id/profile_btn"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/profile_btn"
        android:textSize="31sp"
        android:textColor="@color/text"
        android:backgroundTint="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/discover_btn"
        app:layout_constraintTop_toBottomOf="@+id/poke_5" />


</androidx.constraintlayout.widget.ConstraintLayout>